@@ -1,3 +1,6 @@
+/****************************************************************************/
+/* Test comment                                                             */
+/*--------------------------------------------------------------------------*/
 exec sql include header_test;
 
 exec sql type str is varchar[10];
